# rng

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
docs/: DiscreteUniform.tex
src/: dist.hpp  main.c  prng.hpp  timer.h
src/prng/: chatgpt.c  chatgpt.h  interface.h  mt19937.c  mt19937.h  pcg32.c  pcg32.h  standard.c  standard.h  wrapper.hpp  xoshiro128plusplus.c  xoshiro128plusplus.h
tests/: dist_gen.cpp  dist_speed.cpp  prng_speed.cpp  timer.hpp
